docs(yc): document full public API surface in README
Add complete YcClient / batch / model tables, per-method protocol
notes, scenario matrix, and Spring examples covering loginBySms and
replaceMobile. Point root README at java-sdk docs.